--- a/app/src/main/res/layout/activity_setting_weight.xml
+++ b/app/src/main/res/layout/activity_setting_weight.xml
@@ -132,18 +132,18 @@
                 android:text="Weight Tracker Reminder"
                 android:textColor="#252450"
                 android:textSize="16sp" />
-            <ToggleButton
-                android:id="@+id/tgbtn_reminder_weight"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="5dp"
-                android:textOff=""
-                android:textOn=""
-                android:background="@drawable/swith_on_off"
+            <Switch
+                android:scaleX="1.2"
+                android:id="@+id/checkbox"
+                android:layout_width="@dimen/_70sdp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:layout_width="50dp"
-                android:layout_height="25dp"
-                android:layout_marginRight="5dp"
-                android:layout_alignParentEnd="true" />
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="@dimen/_15sdp"
+                android:layout_marginRight="@dimen/_15sdp"
+                android:checked="true"
+                android:thumb="@drawable/thumb_swith"
+                android:track="@drawable/track_swith" />
         </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
