--- a/app/src/main/res/layout/dialog_time_drinkwater.xml
+++ b/app/src/main/res/layout/dialog_time_drinkwater.xml
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
-            android:textSize="16sp"
+            android:textSize="@dimen/_14ssp"
             android:textColor="#252450"
             android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
@@ -51,7 +51,7 @@
         <TextView
             android:layout_marginTop="5dp"
             android:textColor="#252450"
-            android:textSize="12sp"
+            android:textSize="@dimen/_10ssp"
             android:layout_marginHorizontal="50dp"
           android:gravity="center_horizontal"
             android:layout_gravity="center_horizontal"
@@ -60,15 +60,15 @@
             android:lines="2"
             android:text="Consistently drinking water calms your nerves and organizes your thoughts!"/>
         <Button
-            android:id="@+id/btn_accept"
+            android:id="@+id/btn_accept_service"
             android:layout_marginBottom="15dp"
             android:textColor="#FFF"
             android:background="@drawable/round_bg_button"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
             android:text="Accept"
-            android:layout_width="170dp"
-            android:layout_height="35dp"/>
+            android:layout_width="@dimen/_140sdp"
+            android:layout_height="@dimen/_28sdp"/>
     </LinearLayout>
     </androidx.cardview.widget.CardView>
 
