--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -10,41 +10,43 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="@dimen/_5sdp"
         android:orientation="horizontal">
 
         <TextView
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="History"
             android:textColor="#252450"
-            android:textSize="20sp" />
+            android:textSize="@dimen/_16sdp" />
     </RelativeLayout>
 
     <LinearLayout
+        android:gravity="center_vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_height="@dimen/_32sdp"
+        android:layout_marginTop="@dimen/_6sdp"
         android:orientation="horizontal"
         android:weightSum="3">
 
         <ToggleButton
+
             android:id="@+id/tgbtn_today"
-            android:textColor="@drawable/textcolor"
-            android:background="@drawable/togglebutton_today"
-            android:textAllCaps="false"
-            android:textOff="Today"
-            android:textOn="Today"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="@dimen/_30sdp"
             android:layout_marginHorizontal="4dp"
             android:layout_weight="1"
+            android:background="@drawable/togglebutton_today"
             android:checked="true"
-           />
+            android:textAllCaps="false"
+            android:textColor="@drawable/textcolor"
+            android:textOff="Today"
+            android:textOn="Today" />
+
         <ToggleButton
+
             android:id="@+id/tgbtn_week"
             android:textColor="@drawable/textcolor"
             android:background="@drawable/togglebutton_today"
@@ -52,12 +54,13 @@
             android:textOff="Weeks"
             android:textOn="Weeks"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="@dimen/_30sdp"
             android:layout_marginHorizontal="4dp"
             android:layout_weight="1"
 
            />
         <ToggleButton
+
             android:id="@+id/tgbtn_month"
             android:textColor="@drawable/textcolor"
             android:background="@drawable/togglebutton_today"
@@ -65,7 +68,7 @@
             android:textOff="Months"
             android:textOn="Months"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="@dimen/_30sdp"
             android:layout_marginHorizontal="4dp"
             android:layout_weight="1"
            />
