--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,32 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:weightSum="10"
-    android:orientation="vertical"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="#F6F8FF">
+    android:layout_height="match_parent"
+    android:background="#F6F8FF"
+    android:orientation="vertical"
+    android:weightSum="10">
 
     <TextView
-        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-       android:layout_gravity="center_horizontal"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
         android:text="Setting"
         android:textColor="#252450"
-        android:textSize="20sp" />
+        android:textSize="@dimen/_16ssp" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="8.7"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <!-- TODO: Update blank fragment layout -->
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -68,20 +67,20 @@
                         android:layout_marginLeft="15dp"
                         android:text="Allow reminders"
                         android:textColor="#252450"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/_12ssp" />
 
-                    <ToggleButton
-                        android:id="@+id/tgbtn_reminder"
-                        android:layout_centerVertical="true"
-                        android:layout_marginEnd="5dp"
-                        android:textOff=""
-                        android:textOn=""
-                        android:background="@drawable/swith_on_off"
+                    <Switch
+                        android:scaleX="1.2"
+                        android:id="@+id/checkbox"
+                        android:layout_width="@dimen/_70sdp"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
-                        android:layout_width="50dp"
-                        android:layout_height="25dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_alignParentEnd="true" />
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="@dimen/_15sdp"
+                        android:layout_marginRight="@dimen/_15sdp"
+                        android:checked="true"
+                        android:thumb="@drawable/thumb_swith"
+                        android:track="@drawable/track_swith" />
                 </RelativeLayout>
 
                 <View
@@ -90,11 +89,11 @@
                     android:background="#F6F8FF" />
 
                 <LinearLayout
-                    android:clickable="true"
-                    android:background="@drawable/button_selector"
                     android:id="@+id/ln_interval_time_setting"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    android:background="@drawable/button_selector"
+                    android:clickable="true"
                     android:orientation="horizontal">
 
                     <TextView
@@ -105,7 +104,7 @@
                         android:layout_marginLeft="15dp"
                         android:text="Interval time"
                         android:textColor="#252450"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/_12ssp" />
 
                     <TextView
                         android:id="@+id/tv_interval_setting"
@@ -117,7 +116,7 @@
                         android:gravity="right"
                         android:text="1 hour"
                         android:textColor="#2329D6"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/_12ssp" />
                 </LinearLayout>
 
                 <View
@@ -126,11 +125,11 @@
                     android:background="#F6F8FF" />
 
                 <LinearLayout
-                    android:clickable="true"
-                    android:background="@drawable/button_selector"
                     android:id="@+id/ln_reminder"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    android:background="@drawable/button_selector"
+                    android:clickable="true"
                     android:orientation="horizontal">
 
                     <TextView
@@ -153,7 +152,7 @@
                         android:gravity="right"
                         android:text="Ringtone with vibrate"
                         android:textColor="#2329D6"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/_12ssp" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -165,7 +164,7 @@
                 android:layout_marginTop="15dp"
                 android:text="General"
                 android:textColor="#252450"
-                android:textSize="16sp"
+                android:textSize="@dimen/_12ssp"
                 android:textStyle="bold" />
 
             <LinearLayout
@@ -183,11 +182,11 @@
                     android:background="#F6F8FF" />
 
                 <LinearLayout
-                    android:clickable="true"
-                    android:background="@drawable/button_selector"
                     android:id="@+id/ln_genger_setting"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    android:background="@drawable/button_selector"
+                    android:clickable="true"
                     android:orientation="horizontal">
 
                     <TextView
@@ -198,7 +197,7 @@
                         android:layout_marginLeft="15dp"
                         android:text="Gender"
                         android:textColor="#252450"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/_12ssp" />
 
                     <TextView
                         android:id="@+id/tv_gender_setting"
@@ -210,7 +209,7 @@
                         android:gravity="right"
                         android:text="Male"
                         android:textColor="#2329D6"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/_12ssp" />
                 </LinearLayout>
 
                 <View
@@ -219,11 +218,11 @@
                     android:background="#F6F8FF" />
 
                 <LinearLayout
-                    android:clickable="true"
-                    android:background="@drawable/button_selector"
                     android:id="@+id/ln_daily_gold"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    android:background="@drawable/button_selector"
+                    android:clickable="true"
                     android:orientation="horizontal">
 
                     <TextView
@@ -234,7 +233,7 @@
                         android:layout_marginLeft="15dp"
                         android:text="Daily goal"
                         android:textColor="#252450"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/_12ssp" />
 
                     <TextView
                         android:id="@+id/tv_daily_gold_setting"
@@ -246,7 +245,7 @@
                         android:gravity="right"
                         android:text="1750 ml"
                         android:textColor="#2329D6"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/_12ssp" />
                 </LinearLayout>
 
                 <View
@@ -255,11 +254,11 @@
                     android:background="#F6F8FF" />
 
                 <LinearLayout
-                    android:clickable="true"
-                    android:background="@drawable/button_selector"
                     android:id="@+id/ln_weight_setting"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    android:background="@drawable/button_selector"
+                    android:clickable="true"
                     android:orientation="horizontal">
 
                     <TextView
@@ -270,7 +269,7 @@
                         android:layout_marginLeft="15dp"
                         android:text="Weight"
                         android:textColor="#252450"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/_12ssp" />
 
                     <TextView
                         android:id="@+id/tv_weight_setting"
@@ -282,7 +281,7 @@
                         android:gravity="right"
                         android:text="80 kg"
                         android:textColor="#2329D6"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/_12ssp" />
                 </LinearLayout>
 
                 <View
@@ -291,11 +290,11 @@
                     android:background="#F6F8FF" />
 
                 <LinearLayout
-                    android:clickable="true"
-                    android:background="@drawable/button_selector"
                     android:id="@+id/ln_wakeup_time"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    android:background="@drawable/button_selector"
+                    android:clickable="true"
                     android:orientation="horizontal">
 
                     <TextView
@@ -306,7 +305,7 @@
                         android:layout_marginLeft="15dp"
                         android:text="Wake-up time"
                         android:textColor="#252450"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/_12ssp" />
 
                     <TextView
                         android:id="@+id/tv_wakeup_time_setting"
@@ -318,7 +317,7 @@
                         android:gravity="right"
                         android:text="08:00"
                         android:textColor="#2329D6"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/_12ssp" />
                 </LinearLayout>
 
                 <View
@@ -327,11 +326,11 @@
                     android:background="#F6F8FF" />
 
                 <LinearLayout
-                    android:clickable="true"
-                    android:background="@drawable/button_selector"
                     android:id="@+id/ln_bed_time"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    android:background="@drawable/button_selector"
+                    android:clickable="true"
                     android:orientation="horizontal">
 
                     <TextView
@@ -342,7 +341,7 @@
                         android:layout_marginLeft="15dp"
                         android:text="Bed time"
                         android:textColor="#252450"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/_12ssp" />
 
                     <TextView
                         android:id="@+id/tv_bedtime_setting"
@@ -354,7 +353,7 @@
                         android:gravity="right"
                         android:text="22:00"
                         android:textColor="#2329D6"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/_12ssp" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -366,7 +365,7 @@
                 android:layout_marginTop="15dp"
                 android:text="Other"
                 android:textColor="#252450"
-                android:textSize="16sp"
+                android:textSize="@dimen/_12ssp"
                 android:textStyle="bold" />
 
             <LinearLayout
@@ -384,11 +383,11 @@
                     android:background="#F6F8FF" />
 
                 <LinearLayout
-                    android:clickable="true"
-                    android:background="@drawable/button_selector"
                     android:id="@+id/ln_reset"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    android:background="@drawable/button_selector"
+                    android:clickable="true"
                     android:orientation="horizontal">
 
                     <TextView
@@ -399,20 +398,21 @@
                         android:layout_marginLeft="15dp"
                         android:text="Reset water level to day"
                         android:textColor="#252450"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/_12ssp" />
 
                 </LinearLayout>
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="#F6F8FF" />
 
                 <LinearLayout
-                    android:clickable="true"
-                    android:background="@drawable/button_selector"
                     android:id="@+id/ln_share"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    android:background="@drawable/button_selector"
+                    android:clickable="true"
                     android:orientation="horizontal">
 
                     <TextView
@@ -423,7 +423,7 @@
                         android:layout_marginLeft="15dp"
                         android:text="Share"
                         android:textColor="#252450"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/_12ssp" />
 
                 </LinearLayout>
 
@@ -433,8 +433,11 @@
                     android:background="#F6F8FF" />
 
                 <LinearLayout
+                    android:id="@+id/ln_develop"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    android:background="@drawable/button_selector"
+                    android:clickable="true"
                     android:orientation="horizontal">
 
                     <TextView
@@ -445,7 +448,7 @@
                         android:layout_marginLeft="15dp"
                         android:text="App of developer"
                         android:textColor="#252450"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/_12ssp" />
 
                 </LinearLayout>
 
@@ -456,10 +459,10 @@
 
                 <LinearLayout
                     android:id="@+id/ln_feed_back"
-                    android:clickable="true"
-                    android:background="@drawable/button_selector"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    android:background="@drawable/button_selector"
+                    android:clickable="true"
                     android:orientation="horizontal">
 
                     <TextView
@@ -470,7 +473,7 @@
                         android:layout_marginLeft="15dp"
                         android:text="Feedback"
                         android:textColor="#252450"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/_12ssp" />
                 </LinearLayout>
 
                 <View
@@ -479,8 +482,11 @@
                     android:background="#F6F8FF" />
 
                 <LinearLayout
+                    android:id="@+id/ln_privacy"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    android:background="@drawable/button_selector"
+                    android:clickable="true"
                     android:orientation="horizontal">
 
                     <TextView
@@ -491,11 +497,14 @@
                         android:layout_marginLeft="15dp"
                         android:text="Privacy Police"
                         android:textColor="#252450"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/_12ssp" />
 
                 </LinearLayout>
             </LinearLayout>
-
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_40sdp"/>
         </LinearLayout>
+
     </ScrollView>
 </LinearLayout>
