--- a/app/src/main/res/layout/fragment_week.xml
+++ b/app/src/main/res/layout/fragment_week.xml
@@ -8,39 +8,25 @@
     android:weightSum="10"
     >
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_weight="0.8"
-        android:background="@drawable/round_bg_blue"
-        android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="This Week"
-            android:textColor="#252450"
-            android:textSize="16sp" />
-    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
-        android:layout_weight="3.3">
-<com.github.mikephil.charting.charts.BarChart
-    android:id="@+id/barChart"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+        android:layout_weight="3.5">
+
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/barChart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/_5sdp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="@dimen/_15sdp"
         android:layout_weight="3"
         android:orientation="vertical"
         android:weightSum="3">
@@ -51,8 +37,8 @@
             android:layout_weight="1">
 
             <ImageView
-                android:layout_width="@dimen/_52sdp"
-                android:layout_height="@dimen/_52sdp"
+                android:layout_width="@dimen/_53sdp"
+                android:layout_height="@dimen/_53sdp"
                 android:padding="5dp"
                 android:id="@+id/img1"
                 android:layout_centerVertical="true"
@@ -63,11 +49,11 @@
                 android:id="@+id/tv_ml_week"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_4sdp"
                 android:layout_toRightOf="@id/img1"
                 android:text="1500 ml"
                 android:textColor="#2329D6"
-                android:textSize="@dimen/_14ssp"
+                android:textSize="@dimen/_13ssp"
                 android:textStyle="bold" />
 
             <TextView
@@ -80,6 +66,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:layout_marginTop="@dimen/_5sdp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
@@ -87,8 +74,8 @@
             <ImageView
                 android:padding="5dp"
                 android:id="@+id/img2"
-                android:layout_width="@dimen/_52sdp"
-                android:layout_height="@dimen/_52sdp"
+                android:layout_width="@dimen/_53sdp"
+                android:layout_height="@dimen/_53sdp"
                 android:layout_centerVertical="true"
                 android:layout_marginHorizontal="10dp"
                 android:src="@drawable/ic_two_history" />
@@ -97,11 +84,11 @@
                 android:id="@+id/tv_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_4sdp"
                 android:layout_toRightOf="@id/img2"
                 android:text="5/Day"
                 android:textColor="#2329D6"
-                android:textSize="@dimen/_14ssp"
+                android:textSize="@dimen/_13ssp"
                 android:textStyle="bold" />
 
             <TextView
@@ -114,6 +101,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:layout_marginTop="@dimen/_5sdp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
@@ -121,8 +109,8 @@
             <ImageView
                 android:padding="5dp"
                 android:id="@+id/img"
-                android:layout_width="@dimen/_52sdp"
-                android:layout_height="@dimen/_52sdp"
+                android:layout_width="@dimen/_53sdp"
+                android:layout_height="@dimen/_53sdp"
                 android:layout_centerVertical="true"
                 android:layout_marginHorizontal="10dp"
                 android:src="@drawable/icon_three_fragmen_history" />
@@ -131,11 +119,11 @@
                 android:id="@+id/tv_completion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_4sdp"
                 android:layout_toRightOf="@id/img"
                 android:text="60%"
                 android:textColor="#2329D6"
-                android:textSize="@dimen/_14ssp"
+                android:textSize="@dimen/_13ssp"
                 android:textStyle="bold" />
 
             <TextView
@@ -150,6 +138,7 @@
     </LinearLayout>
 
     <FrameLayout
+        android:layout_marginTop="@dimen/_15sdp"
 
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -161,7 +150,7 @@
                 android:layout_marginHorizontal="15dp"
                 android:layout_alignParentBottom="true"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_50sdp"
+                android:layout_height="@dimen/_52sdp"
                 android:layout_marginTop="@dimen/_8sdp"
                 android:background="@drawable/round_bg">
 
@@ -177,7 +166,7 @@
 2% of the population" />
             </LinearLayout>
             <ImageView
-                android:layout_marginBottom="@dimen/_6sdp"
+                android:layout_marginBottom="@dimen/_8sdp"
                 android:layout_alignParentBottom="true"
                 android:layout_marginLeft="@dimen/_20sdp"
                 android:src="@drawable/ic_historyfour_fragment"
