--- a/app/src/main/res/layout/select_gender.xml
+++ b/app/src/main/res/layout/select_gender.xml
@@ -22,7 +22,7 @@
             android:text="Gender"
             android:textColor="#2329D6"
             android:textSize="@dimen/_18ssp"
-            android:textStyle="bold" />
+            />
         <View
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
@@ -90,12 +90,13 @@
                 android:background="#F6F8FF" />
         </RelativeLayout>
         <Button
+            android:textAllCaps="false"
             android:id="@+id/btn_accept"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="@dimen/_15sdp"
             android:textColor="#FFF"
             android:background="@drawable/round_bg_button"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="@dimen/_17sdp"
             android:text="Accept"
             android:layout_width="170dp"
             android:layout_height="35dp"/>
