--- a/app/src/main/res/drawable/round_bg_weight.xml
+++ b/app/src/main/res/drawable/round_bg_weight.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-            android:color="#8D9FF7"></solid>
+            android:color="#1A8D9FF7"></solid>
     <corners android:radius="15dp"></corners>
 
 
