--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,11 +7,14 @@
     android:orientation="vertical"
     android:weightSum="10"
     tools:context=".screen.splash.SplashActivity">
-
+<LinearLayout
+    android:layout_weight="1"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="8">
+        android:layout_weight="5.9">
 
         <ImageView
             android:layout_width="match_parent"
@@ -44,14 +47,17 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2">
+        android:layout_weight="3">
+
 
         <ImageView
+            android:scaleY="1.5"
+            android:scaleX="1.9"
+            android:id="@+id/img_wave"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
-            android:scaleType="fitXY"
-            android:src="@drawable/sea2" />
+            android:src="@drawable/wave" />
     </RelativeLayout>
 
 </LinearLayout>
