--- a/app/src/main/res/layout/dialog_time.xml
+++ b/app/src/main/res/layout/dialog_time.xml
@@ -22,8 +22,8 @@
             android:layout_marginTop="15dp"
             android:text="Wave-up time"
             android:textColor="#2329D6"
-            android:textSize="23sp"
-            android:textStyle="bold" />
+            android:textSize="@dimen/_19ssp"
+            />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -43,6 +43,7 @@
 
         </RelativeLayout>
         <Button
+            android:textAllCaps="false"
             android:id="@+id/btn_accept"
             android:layout_marginBottom="15dp"
             android:textColor="#FFF"
