--- a/app/src/main/res/layout/fragment_drink_water.xml
+++ b/app/src/main/res/layout/fragment_drink_water.xml
@@ -49,16 +49,16 @@
                 android:padding="@dimen/_36sdp"
                 app:csb_arcColor="#E1EBFD"
                 app:csb_arcWidth="@dimen/_8sdp"
-                app:csb_thumbDrawable="@drawable/hoho"
+                app:csb_thumbDrawable="@drawable/ic_main_circle"
                 app:csb_max="100"
                 app:csb_min="0"
                 app:csb_progress="300"
-                app:csb_progressColor="#4768D9"
+                app:csb_progressColor="#405ed5"
                 app:csb_progressWidth="@dimen/_12sdp"
                 app:csb_step="5"
                 app:csb_textColor="@color/color_text"
                 app:csb_textSize="36sp"
-                app:csb_thumbSize="@dimen/_15sdp"
+                app:csb_thumbSize="@dimen/_12sdp"
 
                />
             <me.itangqi.waveloadingview.WaveLoadingView
@@ -122,7 +122,7 @@
                 android:layout_marginBottom="@dimen/_18sdp"
                 android:layout_toEndOf="@id/img_last_drink"
                 android:layout_toRightOf="@id/img_last_drink"
-                android:text="Last drink 20:30"
+                android:text="Last drink 00:00"
                 android:textColor="#252450" />
 
             <TextView
