--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#D81B60</color>
     <color name="click">#E7E3E3</color>
     <color name="red">#F30606</color>
+    <color name="whilte">#BBB9B9</color>
+    <color name="blue">#2196F3</color>
 
 
 
